# expiration-notifier

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
