[package]
name = "expiration-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rusqlite = "0.28"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
